--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,28 @@ gradle-app.setting
 
 # Cache of project
 .gradletasknamecache
+
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# IntelliJ IDEA
+*.iml
+.idea/
+/out/
