--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ repositories {
 
 ext['tomcat.version'] = '7.0.59'
 dependencies {
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     compile('org.springframework.boot:spring-boot-starter-data-mongodb')
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
