--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,10 @@ repositories {
 ext['tomcat.version'] = '7.0.59'
 dependencies {
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    compile('org.springframework.boot:spring-boot-starter-data-mongodb')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+
+    compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    compile 'org.springframework.boot:spring-boot-starter-web'
 }
 
 
